--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.min.css">
   <script src="./assets/js/main.js" type="module"></script>
   <title>indexedDB Task Manager</title>
 </head>
@@ -13,9 +13,7 @@
 <body class="flex nowrap">
   <div id="App">
     <section class="top grid center">
-      <div>
-        <form is="task-form" class="flex nowrap"></form>
-      </div>
+      <form is="task-form"></form>
     </section>
     <section class="bottom grid center">
       <ul is="task-list" class="flex nowrap"></ul>
